appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: Login to existing account
    timeout: 30000
- tapOn: Login to existing account
- waitForAnimationToEnd
- inputText: ${USER_EMAIL}
- assertVisible: ${USER_EMAIL}
- tapOn: done
- extendedWaitUntil:
    visible: ".*Enter the password for.*"
    timeout: 30000
- inputText: ${USER_PASSWORD}
- tapOn: done
- extendedWaitUntil:
    visible: ".*(Search your documents|Add item|Save to Locker).*"
    timeout: 90000
- extendedWaitUntil:
    notVisible: "Syncing..."
    timeout: 90000
- assertNotVisible: Something went wrong
- assertNotVisible: ".*collection sync cursor was not advanced.*"
