appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: Login to existing account
    timeout: 30000
- tapOn: Login to existing account
- extendedWaitUntil:
    visible: |-
      Email
      Enter your email id
    timeout: 15000
- tapOn: |-
    Email
    Enter your email id
- inputText: ${USER_EMAIL}
- tapOn:
    text: Done
- extendedWaitUntil:
    visible: ".*Password.*"
    timeout: 15000
- inputText: ${USER_PASSWORD}
- tapOn:
    text: Done
- extendedWaitUntil:
    visible: ".*(Add item|Save to Locker).*"
    timeout: 90000
